# mygithub

./: .envrc  .gitignore  README.md  cli.py  noxfile.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f96f1360093_autogenerated_migration.py  22dcf00a0238_autogenerated_migration.py  52bfdd9c1281_initial_migration.py  678bf126cb93_autogenerated_migration.py  6d70541bfd90_autogenerated_migration.py  88a1cade3799_autogenerated_migration.py  a8f4644849dc_autogenerated_migration.py  b29daa5cc061_initial_migration.py  b9f94767636e_initial_migration.py  cd69ac54bcb5_autogenerated_migration.py  cf5833d1b98d_autogenerated_migration.py  e8167c89b646_autogenerated_migration.py  fb031a734058_autogenerated_migration.py
applications/api/: pyproject.toml
applications/api/src/api/: __init__.py  constants.py  main.py  start_api.py  tag_definitions.py
applications/api/src/api/helpers/: __init__.py
applications/api/src/api/helpers/response_helpers/: _helpers.py
applications/api/src/api/pagination/: __init__.py  paged.py
applications/api/src/api/responses/: __init__.py  _responses.py
applications/api/src/api/routers/: __init__.py  api_router.py  healthcheck.py
applications/api/src/api/routers/search/: __init__.py  search_router.py
applications/api/src/api/routers/stars/: __init__.py  starred_router.py
applications/api/src/api/utils/: __init__.py  __utils.py
applications/api/src/api/validators/: __init__.py  __validators.py
applications/cli/: pyproject.toml
applications/cli/src/project_cli/: _controller.py  main.py
applications/cli/src/project_cli/subcommands/: _alembic.py  api.py  db.py
applications/cli/src/project_cli/subcommands/github/: gh_stars.py  main.py
config/: .secrets.toml  settings.toml
libs/coreutils-lib/: pyproject.toml
libs/coreutils-lib/src/core_utils/df_utils/convert/: _converters.py
libs/coreutils-lib/src/core_utils/df_utils/io/: load.py  save.py
libs/coreutils-lib/src/core_utils/df_utils/utils/: _utils.py
libs/coreutils-lib/src/core_utils/df_utils/validators/: type_validators.py
libs/coreutils-lib/src/core_utils/hash_utils/: methods.py
libs/coreutils-lib/src/core_utils/spinner_utils/: __init__.py  spinners.py
libs/coreutils-lib/src/core_utils/time_utils/: methods.py
libs/coreutils-lib/src/core_utils/uuid_utils/: operations.py  validators.py
libs/database-lib/src/db_lib/: __methods.py  base.py  mixins.py  utils.py
libs/database-lib/src/db_lib/demo_db/: __methods.py
libs/dataframe-lib/: pyproject.toml
libs/dataframe-lib/src/df_lib/: load.py
libs/depends-lib/src/depends/: db_depends.py
libs/http-lib/src/http_lib/: cache.py  client.py  constants.py  controllers.py  main.py
libs/settings-lib/src/settings/: __init__.py  api_settings.py  app_settings.py  celery_settings.py  db_settings.py  github_settings.py  logging_settings.py
libs/setup-lib/src/setup/: __setup_db.py
libs/spinner-lib/: pyproject.toml
libs/spinner-lib/src/cli_spinners/: __init__.py  _spinners.py
sandbox/api_sandbox/: api_demo.py
sandbox/datalab_sandbox/: demo.py
sandbox/spinner_sandbox/: halo_spinners.py  stlib_spinners.py
scripts/api/: run_api.py
scripts/stars/: update_repo_stars_json.py
src/mygh/: __init__.py  cli.py  main.py  start_cli.py
src/mygh/_cli/: _controller.py  main.py
src/mygh/_cli/subcommands/: _alembic.py  db.py
src/mygh/_cli/subcommands/github/: __init__.py  gh_stars.py  main.py
src/mygh/client/: __init__.py  stars.py
src/mygh/controllers/: __init__.py  _controllers.py
src/mygh/domain/github/stars/: __init__.py  converters.py  models.py  repository.py  schemas.py
src/mygh/libs/db_lib/: __methods.py
src/mygh/libs/db_lib/demo_db/: __methods.py
src/mygh/libs/demo_db/: __methods.py
src/mygh/libs/depends/: db_depends.py
src/mygh/libs/http_lib/: main.py
src/mygh/libs/settings/: github_settings.py
src/mygh/libs/setup/: __setup_db.py
