[project]
name = "mygithub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "none@none.com" }]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=3.6.0",
    "dynaconf>=3.2.7",
    "hishel>=0.1.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "sqlalchemy>=2.0.38",
]

[project.scripts]
mygithub = "mygithub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mygh"]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.5",
]
