[project]
name = "mygithub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "none@none.com" }]
requires-python = ">=3.12"
dependencies = [
    "cli",
    "controllers",
    "coreutils-lib",
    "cyclopts>=3.6.0",
    "database-lib",
    "datalab",
    "depends-lib",
    "domain",
    "dynaconf>=3.2.7",
    "github-client",
    "hishel>=0.1.1",
    "http-lib",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=19.0.0",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "settings-lib",
    "setup-lib",
    "sqlalchemy>=2.0.38",
]

[project.scripts]
mygithub = "mygithub:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mygh"]

[tool.uv.workspace]
members = ["libs/*", "packages/*", "applications/*"]

[tool.uv.sources]
coreutils-lib = { workspace = true }
database-lib = { workspace = true }
depends-lib = { workspace = true }
http-lib = { workspace = true }
settings-lib = { workspace = true }
setup-lib = { workspace = true }
domain = { workspace = true }
controllers = { workspace = true }
github-client = { workspace = true }
cli = { workspace = true }
datalab = { workspace = true }
dataframe-lib = { workspace = true }

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "nox>=2024.10.9",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.5",
]
