[project]
name = "dataframe-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "redjax", email = "no@none.com" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
dataframe-lib = "dataframe_lib:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/df_lib"]

[tool.uv.sources]
settings-lib = { workspace = true }
